Changed graph resizing issue on small screens.

--- a/css/chart-styles.css
+++ b/css/chart-styles.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 .chart-container {
-        width: 70%;
-        max-width: 80%;
-        margin: auto;
-        height:50%;
+        width: 80%;
+        max-width: 700px;
+        margin: 0 auto;
+        height:auto;
         border: .5px solid #000;
         padding: 10px;
         background-color: white;
@@ -15,3 +15,15 @@ canvas {
         width: 100%;
         height: auto;
       }
+
+
+@media screen and (max-width: 768px) {
+  .chart-container {
+    width: 100%;
+    padding: 0 10px;
+  }
+
+  .chart-title {
+    font-size: 14px;
+  }
+}
